# cppshell

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  execute_command.cpp  simple.cpp  sort_lines.cpp  stream_test.cpp  tempfile.cpp
include/cppshell/: cache_directory.hpp  check_unix_command_error.hpp  command_arguments.hpp  command_arguments_from_string.hpp  config_directory.hpp  context.hpp  context_fwd.hpp  error_stream_flags.hpp  error_stream_flags_field.hpp  exception.hpp  execute_command.hpp  execute_command_and_wait.hpp  fd_to_ostream.hpp  file_contents_if_exists.hpp  getenv.hpp  home_directory.hpp  make_unique.hpp  noncopyable.hpp  optional_input_fd.hpp  optional_input_stream.hpp  optional_path.hpp  optional_process_description.hpp  path_for_executable.hpp  pipe_fwd.hpp  stderr_to_stdout.hpp  strong_fd.hpp  strong_fd_fwd.hpp  strong_fd_scoped_ptr.hpp  strong_fd_shared_ptr.hpp  strong_fd_unique_ptr.hpp  warning_stream.hpp
include/cppshell/command_output/: object.hpp  object_fwd.hpp  object_scoped_ptr.hpp  object_shared_ptr.hpp  object_unique_ptr.hpp
include/cppshell/linux/: eventfd.hpp  eventfd_fwd.hpp
include/cppshell/linux/epoll/: callback.hpp  callback_fn.hpp  control_flags.hpp  control_flags_field.hpp  fd_set.hpp  object.hpp  optional_timeout_duration.hpp  parallel_event_count.hpp  timeout_duration.hpp
include/cppshell/output/: manager.hpp  manager_fwd.hpp  redirection_target.hpp  thread_data.hpp
include/cppshell/posix/: chmod_fd.hpp  exec.hpp  fd.hpp  fork.hpp  open.hpp  open_flags.hpp  open_flags_field.hpp  open_flags_to_posix_flags.hpp  pipe.hpp  process_id.hpp  process_id_scoped_ptr.hpp  process_id_unique_ptr.hpp  process_return_value.hpp  redirect_stderr_to_stdout.hpp  redirect_stream_to_fd.hpp  redirect_to_fd.hpp  stderr_fd.hpp  stdin_fd.hpp  stdout_fd.hpp  temporary_file.hpp  temporary_file_template.hpp  wait_for_process.hpp
include/cppshell/posix/permissions/: bitfield.hpp  group_execute.hpp  group_read.hpp  group_write.hpp  others_execute.hpp  others_read.hpp  others_write.hpp  owner_execute.hpp  owner_read.hpp  owner_write.hpp  set_group_id.hpp  set_user_id.hpp  sticky.hpp  underlying_enum.hpp
include/cppshell/process/: data.hpp  data_fwd.hpp  manager.hpp  manager_fwd.hpp  optional_description.hpp  wait_for_completion.hpp
include/cppshell/stream/: from_file.hpp  object.hpp  object_fwd.hpp  object_scoped_ptr.hpp  object_shared_ptr.hpp  object_unique_ptr.hpp  to_ostream.hpp
src/cppshell/: cache_directory.cpp  check_unix_command_error.cpp  command_arguments_from_string.cpp  config_directory.cpp  context.cpp  execute_command.cpp  execute_command_and_wait.cpp  fd_to_ostream.cpp  file_contents_if_exists.cpp  getenv.cpp  home_directory.cpp  path_for_executable.cpp  strong_fd.cpp  warning_stream.cpp
src/cppshell/command_output/: object.cpp
src/cppshell/linux/: eventfd.cpp
src/cppshell/linux/epoll/: object.cpp
src/cppshell/output/: manager.cpp  thread_data.cpp
src/cppshell/posix/: 1338666474fork.cpp  chmod_fd.cpp  exec.cpp  fork.cpp  open.cpp  open_flags_to_posix_flags.cpp  pipe.cpp  redirect_stderr_to_stdout.cpp  redirect_stream_to_fd.cpp  redirect_to_fd.cpp  stderr_fd.cpp  stdin_fd.cpp  stdout_fd.cpp  temporary_file.cpp  wait_for_process.cpp
src/cppshell/posix/permissions/: group_execute.cpp  group_read.cpp  group_write.cpp  others_execute.cpp  others_read.cpp  others_write.cpp  owner_execute.cpp  owner_read.cpp  owner_write.cpp  set_group_id.cpp  set_user_id.cpp  sticky.cpp
src/cppshell/process/: data.cpp  manager.cpp
src/cppshell/stream/: from_file.cpp  object.cpp  to_ostream.cpp
tools/: CMakeLists.txt  cppshell_jit.cpp
util/: prettify_includes.sh  update_cmake.sh
